Site done calc section services block 50% mobile v done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.7">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.8">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.4">
 
     <title>EpolisPlus</title>
@@ -428,7 +428,7 @@
                                             <h4 class="text-black fw-semibold fs-5">Simple</h4>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column border-bottom-dashed py-3">
+                                    <div class="d-flex flex-column py-3">
                                         <h5 class="fs-8 text-light-emphasis">Общий лимит возмещения</h5>
                                         <h4 class="fw-semibold fs-4 text-secondary mb-3">3 000 000</h4>
                                         <h6 class="fs-7 text-black mb-2 d-flex align-items-center column-gap-2">
@@ -444,7 +444,7 @@
                                             консультация
                                         </h6>
                                     </div>
-                                    <div class="d-flex flex-column pt-3 w-100">
+                                    <div class="d-flex flex-column border-top-dashed pt-3 w-100">
                                         <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
                                         <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
                                             <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
@@ -470,7 +470,7 @@
                                             <h4 class="text-black fw-semibold fs-5">Standard</h4>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column border-bottom-dashed py-3">
+                                    <div class="d-flex flex-column py-3">
                                         <h5 class="fs-8 text-light-emphasis">Общий лимит возмещения</h5>
                                         <h4 class="fw-semibold fs-4 text-secondary mb-3">12 000 000</h4>
                                         <h6 class="fs-7 text-black mb-2 d-flex align-items-center column-gap-2">
@@ -493,7 +493,7 @@
                                             консультация
                                         </h6>
                                     </div>
-                                    <div class="d-flex flex-column pt-3 w-100">
+                                    <div class="d-flex flex-column border-top-dashed pt-3 w-100">
                                         <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
                                         <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
                                             <img src="./assets/images/svg/coin.svg" alt="">250 000 сум</p>
@@ -519,7 +519,7 @@
                                             <h4 class="text-black fw-semibold fs-5">Silver</h4>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column border-bottom-dashed py-3">
+                                    <div class="d-flex flex-column py-3">
                                         <h5 class="fs-8 text-light-emphasis">Общий лимит возмещения</h5>
                                         <h4 class="fw-semibold fs-4 text-secondary mb-3">70 000 000</h4>
                                         <h6 class="fs-7 text-black mb-2 d-flex align-items-center column-gap-2">
@@ -550,7 +550,7 @@
                                             консультация
                                         </h6>
                                     </div>
-                                    <div class="d-flex flex-column pt-3 w-100">
+                                    <div class="d-flex flex-column border-top-dashed pt-3 w-100">
                                         <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
                                         <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
                                             <img src="./assets/images/svg/coin.svg" alt="">400 000 сум</p>
@@ -574,7 +574,7 @@
                                             <h4 class="text-black fw-semibold fs-5">Gold</h4>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-column border-bottom-dashed py-3">
+                                    <div class="d-flex flex-column py-3">
                                         <h5 class="fs-8 text-light-emphasis">Общий лимит возмещения</h5>
                                         <h4 class="fw-semibold fs-4 text-secondary mb-3">110 000 000</h4>
                                         <h6 class="fs-7 text-black mb-2 d-flex align-items-center column-gap-2">
@@ -607,7 +607,7 @@
                                             консультация
                                         </h6>
                                     </div>
-                                    <div class="d-flex flex-column pt-3 w-100">
+                                    <div class="d-flex flex-column border-top-dashed pt-3 w-100">
                                         <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
                                         <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
                                             <img src="./assets/images/svg/coin.svg" alt="">800 000 сум</p>
@@ -748,14 +748,16 @@
                             </div>
                             <div class="col-12 col-lg-5 col-sm-4">
                                 <label for="exampleInputDate2"
-                                       class="form-label fs-8 text-light-emphasis">Дата окончания<span class="text-secondary">*</span></label>
+                                       class="form-label fs-8 text-light-emphasis">Дата окончания<span
+                                        class="text-secondary">*</span></label>
                                 <input required type="date" autocomplete="off" class="form-control"
                                        id="exampleInputDate2" placeholder="Страны..."
                                        aria-describedby="emailHelp">
                             </div>
                             <div class="col-12 col-lg-2 col-sm-4">
                                 <label for="exampleInputDate3"
-                                       class="form-label fs-8 text-light-emphasis">Кол-во дней<span class="text-secondary">*</span></label>
+                                       class="form-label fs-8 text-light-emphasis">Кол-во дней<span
+                                        class="text-secondary">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control"
                                        id="exampleInputDate3" placeholder="0"
                                        aria-describedby="emailHelp">
@@ -765,11 +767,13 @@
                                     <h5 class="fs-8 text-light-emphasis mb-2">Цель поездки</h5>
                                     <div class="d-flex column-gap-2">
                                         <input id="trip1" type="radio" class="" name="trips" required>
-                                        <label for="trip1" class="fw-semibold text-black">Туризм / Служебная командировка</label>
+                                        <label for="trip1" class="fw-semibold text-black">Туризм / Служебная
+                                            командировка</label>
                                     </div>
                                     <div class="d-flex column-gap-2">
                                         <input id="trip2" type="radio" class="" name="trips" required>
-                                        <label for="trip2" class="fw-semibold text-black">Работа (Физический труд)</label>
+                                        <label for="trip2" class="fw-semibold text-black">Работа (Физический
+                                            труд)</label>
                                     </div>
                                     <div class="d-flex column-gap-2">
                                         <input id="trip3" type="radio" class="" name="trips" required>
@@ -830,6 +834,93 @@
                 <div class="tab-pane fade" id="others-tab-pane" role="tabpanel"
                      aria-labelledby="contact-tab"
                      tabindex="0">
+                    <div class="d-flex mx-auto align-items-center bg-secondary-light primary-radius flex-column row-gap-1 flex-sm-row w-max-content">
+                        <img src="assets/images/svg/gift.svg" alt="">
+                        <p class="fs-7 text-black ms-sm-2 me-sm-1">Оформляя более 2 услуг</p>
+                        <p class="text-secondary fw-semibold fs-7">Вы получаете скидку 20%</p>
+                    </div>
+                    <div class="row row-gap-3 mt-3 pt-3">
+                        <div class="col-xl-3 col-lg-4 col-md-6">
+                            <label for="services1" class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
+                                <div class="d-flex justify-content-between w-100 mb-1 position-relative">
+                                    <img src="./assets/images/svg/pen.svg" alt="">
+                                    <input type="checkbox" id="services1" class="rounded-2 mb-auto" name="services">
+                                    <span class="checkbox-child"></span>
+                                </div>
+                                <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Оформления "Европротокола"</h5>
+                                <div class="d-flex flex-column pt-3 border-top-dashed w-100 mt-auto">
+                                    <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
+                                    <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
+                                        <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
+                                    <div class="d-flex align-items-center">
+                                        <a class="btn-white transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
+                                           href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                           s="">Подробнее</a>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6">
+                            <label for="services2" class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
+                                <div class="d-flex justify-content-between w-100 mb-1 position-relative">
+                                    <img src="./assets/images/svg/car-evacuation.svg" alt="">
+                                    <input type="checkbox" id="services2" class="rounded-2 mb-auto" name="services">
+                                    <span class="checkbox-child"></span>
+                                </div>
+                                <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Эвакуация автомобиля</h5>
+                                <div class="d-flex flex-column pt-3 border-top-dashed w-100 mt-auto">
+                                    <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
+                                    <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
+                                        <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
+                                    <div class="d-flex align-items-center">
+                                        <a class="btn-white transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
+                                           href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                           s="">Подробнее</a>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6">
+                            <label for="services3" class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
+                                <div class="d-flex justify-content-between w-100 mb-1 position-relative">
+                                    <img src="./assets/images/svg/car-evacuation.svg" alt="">
+                                    <input type="checkbox" id="services3" class="rounded-2 mb-auto" name="services">
+                                    <span class="checkbox-child"></span>
+                                </div>
+                                <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Подвоз топлива</h5>
+                                <div class="d-flex flex-column pt-3 border-top-dashed w-100 mt-auto">
+                                    <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
+                                    <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
+                                        <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
+                                    <div class="d-flex align-items-center">
+                                        <a class="btn-white transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
+                                           href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                           s="">Подробнее</a>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6">
+                            <label for="services4" class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
+                                <div class="d-flex justify-content-between w-100 mb-1 position-relative">
+                                    <img src="./assets/images/svg/car-evacuation.svg" alt="">
+                                    <input type="checkbox" id="services4" class="rounded-2 mb-auto" name="services">
+                                    <span class="checkbox-child"></span>
+                                </div>
+                                <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">ДЗарядка и запуск аккумулятора</h5>
+                                <div class="d-flex flex-column pt-3 border-top-dashed w-100 mt-auto">
+                                    <h5 class="text-light-emphasis fs-8 mb-1">Сумма оплаты</h5>
+                                    <p class="d-flex align-items-center column-gap-2 bg-light mb-3 primary-radius text-black fw-semibold fs-7 pay-amount">
+                                        <img src="./assets/images/svg/coin.svg" alt="">100 000 сум</p>
+                                    <div class="d-flex align-items-center">
+                                        <a class="btn-white transition primary-radius py-2 px-4 w-100 d-flex justify-content-center"
+                                           href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                           s="">Подробнее</a>
+                                    </div>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1064,7 +1155,7 @@
 <script src="assets/script/bootstrap.bundle.min.js"></script>
 
 <!--================ MAIN JS | Omonjon ================-->
-<script src="assets/script/main.js?v=0.4"></script>
+<script src="assets/script/main.js?v=0.5"></script>
 </body>
 
 </html>
