signin and signup page done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.9">
+    <link rel="stylesheet" href="assets/styles/main.css?v=1.1">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.5">
 
     <title>EpolisPlus</title>
@@ -88,7 +88,7 @@
                 </ul>
                 <!-- End Language -->
             </div>
-            <a href="#!"
+            <a href="./pages/signIn.html"
                class="btn btn-white primary-radius mt-2 py-2 px-2 d-flex justify-content-center column-gap-2 w-100">
                 <img src="./assets/images/svg/user.svg" alt="" class="">
                 <span class="text-black fs-8 fw-regular">Войти</span>
@@ -274,7 +274,7 @@
                     <img src="./assets/images/svg/phone.svg" alt="" class="">
                     <span class="d-none d-xl-block text-white fs-8 fw-bold">Экстренный вызов</span>
                 </a>
-                <a href="#!"
+                <a href="./pages/signIn.html"
                    class="d-none d-sm-flex column-gap-2 rounded-circle-mb btn btn-white transition primary-radius py-2 px-3">
                     <img src="./assets/images/svg/user.svg" alt="" class="">
                     <span class="d-none d-xl-block text-black fs-8 fw-semibold">Войти</span>
@@ -680,7 +680,7 @@
                             <div class="car-num me-sm-2">
                                 <label for="exampleInputEmail2" class="form-label fs-8 text-light-emphasis">Гос номер
                                     <span
-                                            class="text-secondary">*</span></label>
+                                            class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control text-black"
                                        id="exampleInputEmail2" placeholder="01M571SA"
                                        aria-describedby="emailHelp">
@@ -688,21 +688,21 @@
                             <div class="tech-pas ms-sm-1 me-2">
                                 <label for="exampleInputPassword3"
                                        class="form-label fs-8 text-light-emphasis ">Серия и номер тех. паспорта<span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control text-black"
                                        placeholder="AAG" id="exampleInputPassword3">
                             </div>
                             <div class="tech-pas-num me-md-2">
                                 <label for="exampleInputPassword7"
                                        class="form-label fs-8 text-light-emphasis invisible">x<span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control text-black"
                                        placeholder="9999999" id="exampleInputPassword7">
                             </div>
                             <div class="ins-type ms-md-1 me-2">
                                 <label for="exampleInputPassword4"
                                        class="form-label fs-8 text-light-emphasis">Количество водителей <span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <select class="form-select text-black" id="exampleInputPassword4"
                                         aria-label="Default select example" required>
                                     <option selected value="">Select</option>
@@ -771,14 +771,14 @@
                         <div class="row row-gap-3">
                             <div class="col-12 col-md-6 col-sm-6">
                                 <label for="exampleInputEmail3" class="form-label fs-8 text-light-emphasis">Страны
-                                    <span class="text-secondary">*</span></label>
+                                    <span class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control"
                                        id="exampleInputEmail3" placeholder="Страны..."
                                        aria-describedby="emailHelp">
                             </div>
                             <div class="col-12 col-md-6 col-sm-6">
                                 <label for="exampleInputSelect2" class="form-label fs-8 text-light-emphasis">Тип полиса
-                                    <span class="text-secondary">*</span></label>
+                                    <span class="text-secondary ms-1">*</span></label>
                                 <select class="form-select text-black" id="exampleInputSelect2"
                                         aria-label="Default select example" required="">
                                     <option selected="" value="">Select</option>
@@ -790,7 +790,7 @@
                             <div class="col-12 col-lg-5 col-sm-4">
                                 <label for="exampleInputDate1"
                                        class="form-label fs-8 text-light-emphasis">Дата начала<span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <input required type="date" autocomplete="off" class="form-control"
                                        id="exampleInputDate1" placeholder="Страны..."
                                        aria-describedby="emailHelp">
@@ -798,7 +798,7 @@
                             <div class="col-12 col-lg-5 col-sm-4">
                                 <label for="exampleInputDate2"
                                        class="form-label fs-8 text-light-emphasis">Дата окончания<span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <input required type="date" autocomplete="off" class="form-control"
                                        id="exampleInputDate2" placeholder="Страны..."
                                        aria-describedby="emailHelp">
@@ -806,7 +806,7 @@
                             <div class="col-12 col-lg-2 col-sm-4">
                                 <label for="exampleInputDate3"
                                        class="form-label fs-8 text-light-emphasis">Кол-во дней<span
-                                        class="text-secondary">*</span></label>
+                                        class="text-secondary ms-1">*</span></label>
                                 <input required type="text" autocomplete="off" class="form-control"
                                        id="exampleInputDate3" placeholder="0"
                                        aria-describedby="emailHelp">
@@ -894,7 +894,7 @@
                                    class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
                                 <div class="d-flex justify-content-between w-100 mb-1 position-relative">
                                     <img src="./assets/images/svg/pen.svg" alt="">
-                                    <input type="checkbox" id="services1" class="rounded-2 mb-auto" name="services">
+                                    <input type="checkbox" id="services1" class="mb-auto" name="services">
                                     <span class="checkbox-child"></span>
                                 </div>
                                 <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Оформления "Европротокола"</h5>
@@ -916,7 +916,7 @@
                                    class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
                                 <div class="d-flex justify-content-between w-100 mb-1 position-relative">
                                     <img src="./assets/images/svg/car-evacuation.svg" alt="">
-                                    <input type="checkbox" id="services2" class="rounded-2 mb-auto" name="services">
+                                    <input type="checkbox" id="services2" class="mb-auto" name="services">
                                     <span class="checkbox-child"></span>
                                 </div>
                                 <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Эвакуация автомобиля</h5>
@@ -938,7 +938,7 @@
                                    class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
                                 <div class="d-flex justify-content-between w-100 mb-1 position-relative">
                                     <img src="./assets/images/svg/oil.svg" alt="">
-                                    <input type="checkbox" id="services3" class="rounded-2 mb-auto" name="services">
+                                    <input type="checkbox" id="services3" class="mb-auto" name="services">
                                     <span class="checkbox-child"></span>
                                 </div>
                                 <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Подвоз топлива</h5>
@@ -960,7 +960,7 @@
                                    class="d-flex flex-column align-items-start services-box primary-radius transition p-3">
                                 <div class="d-flex justify-content-between w-100 mb-1 position-relative">
                                     <img src="./assets/images/svg/charger.svg" alt="">
-                                    <input type="checkbox" id="services4" class="rounded-2 mb-auto" name="services">
+                                    <input type="checkbox" id="services4" class="mb-auto" name="services">
                                     <span class="checkbox-child"></span>
                                 </div>
                                 <h5 class="fs-5 fw-semibold text-black mt-2 mb-3">Зарядка и запуск аккумулятора</h5>
@@ -1248,8 +1248,8 @@
                 <a href="#"><img src="./assets/images/google-play.png" alt=""></a>
             </div>
             <div class="d-flex align-items-center column-gap-3 column-gap-sm-0">
-                <a class="me-sm-2" href="#"><img src="./assets/images/telegram.png" alt=""></a>
-                <a class="" href="#"><img src="./assets/images/instagram.png" alt=""></a>
+                <a class="social-btn rounded-circle d-flex align-items-center justify-content-center btn-white transition me-sm-2" href="#"><img src="./assets/images/svg/telegram.svg" alt=""></a>
+                <a class="social-btn rounded-circle d-flex align-items-center justify-content-center btn-white transition" href="#"><img src="./assets/images/svg/instagram.svg" alt=""></a>
                 <a class="d-flex align-items-center column-gap-2 btn btn-primary transition primary-radius btn-footer ms-sm-4"
                    href="tel:+998900000000"><img class="" src="./assets/images/svg/phone-check.svg" alt=""><span
                         class="d-none d-sm-block fs-7 fw-semibold">Позвонить сейчас</span></a>
@@ -1284,7 +1284,7 @@
 <script src="assets/script/bootstrap.bundle.min.js"></script>
 
 <!--================ MAIN JS | Omonjon ================-->
-<script src="assets/script/main.js?v=0.6"></script>
+<script src="assets/script/main.js?v=0.8"></script>
 </body>
 
 </html>
